test: use getFirst() instead of get(0) in ListImpl items assertion